--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,10 @@ h1, h2, h3, h4, h5 {
     letter-spacing: 0.25em;
 }
 
+section {
+    overflow-x: hidden !important;
+}
+
 form {
     display: inline-block;
 }
